--- a/html/main/main.html
+++ b/html/main/main.html
@@ -29,7 +29,7 @@
 
 			<article class="article-box">
 				<section class="section-a">
-
+					<p class="section-a-title"><span class="txt-line">TeraStudy만의 비교할 수 없는 <strong class="t-bold">프리미엄 서비스</strong><i class="blt-arrow-a"></i></span></p>
 				</section>
 			</article>
 		</main>
