프리미엄 서비스 추가

--- a/html/main/main.html
+++ b/html/main/main.html
@@ -12,7 +12,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="mobile-web-app-capable" content="yes">
 
-    <title>c</title>
+    <title>테라스터디</title>
 
 	<link rel="stylesheet" href="../../resources/css/ui.base.css">
 	<script src="../../resources/js/lib/jquery-1.12.4.min.js"></script>
@@ -179,7 +179,24 @@
 
 			<article class="article-box">
 				<section class="section-a">
-					<p class="section-a-title"><span class="txt-line">TeraStudy만의 비교할 수 없는 <strong class="t-bold">프리미엄 서비스</strong><i class="blt-arrow-a"></i></span></p>
+					<p class="section-a-title"><span class="txt-line"><span>TeraStudy만의 비교할 수 없는</span> <strong class="t-bold">프리미엄 서비스</strong><i class="blt-arrow-a"></i></span></p>
+					<div class="service-info">
+						<div class="service-item">
+							<p class="txt-number"><span>하나!</span></p>
+							<p class="service-title">멤버쉽으로 운영되는 <br>프리미엄 강사진 </p>
+							<p class="service-txt">강사 전원 멤버쉽 구성<br>서류 전형, 시강, 면접 3단계를 거친 강사진<br>화상 교육 방법 필수 이수</p>
+						</div>
+						<div class="service-item">
+							<p class="txt-number"><span>둘</span></p>
+							<p class="service-title">수강생을 위한 <br>최상의 지원 서비스 </p>
+							<p class="service-txt">수강생 Needs에 맞는 최적의 리더 매칭<br>자체 솔루션을 통한 모니터링<br>원격지술지원, 학습상담을 통한 매니지먼트</p>
+						</div>
+						<div class="service-item">
+							<p class="txt-number"><span>셋</span></p>
+							<p class="service-title">맞춤형 1:1 컨설팅을 <br>통한 효율적인 학습 목표 수립 </p>
+							<p class="service-txt">리더와의 1:1 맞춤형 컨설팅<br>레벨 체크, 수강생 강약점 컨설팅<br>개인별 맞춤 수업전략을 설계</p>
+						</div>
+					</div>
 				</section>
 			</article>
 		</main>
