--- a/html/inc/header.html
+++ b/html/inc/header.html
@@ -1,4 +1,4 @@
-<div class="header-wrap">
+<div class="header-area">
     <h1 class="logo-tera">
         <img src="../../resources/images/common/logo.png" alt="TERA Study">
     </h1>
