--- a/html/main/main.html
+++ b/html/main/main.html
@@ -38,22 +38,22 @@
 						<li class="n1 on">
 							<button type="button" class="btn-dep-1"><span>영어</span></button>
 							<div class="dep-2">
-								<button type="button" class="btn selected">
+								<button type="button" class="btn-gold selected">
 									<span>수능/내신</span>
 								</button>
-								<button type="button" class="btn">
+								<button type="button" class="btn-gold">
 									<span>리딩/작문</span>
 								</button>
-								<button type="button" class="btn">
+								<button type="button" class="btn-gold">
 									<span>문법</span>
 								</button>
-								<button type="button" class="btn">
+								<button type="button" class="btn-gold">
 									<span>고급회화</span>
 								</button>
-								<button type="button" class="btn">
+								<button type="button" class="btn-gold">
 									<span>회화</span>
 								</button>
-								<button type="button" class="btn">
+								<button type="button" class="btn-gold">
 									<span>비지니스회화</span>
 								</button>
 							</div>
@@ -67,59 +67,79 @@
 					</ul>
 				</div>
 
-				<div class="swiper-container teacher-swiper">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<div class="teacher-item">
-								<img class="photo" src="../../resources/images/teacher/sample01.png" alt="">
-								<dl class="info">
-									<dt>김연수</dt>
-									<dd>#기초회화 #TSC #발음/성조 #중문법 #리딩 #발음교정 #고급회화 #HSK3~5급</dd>
-								</dl>
-								<div class="btn-area">
-									<a href="#" class="btn">수업신청하기</a>
+				<div class="teacher-list">
+					<div class="swiper-container teacher-swiper">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<div class="teacher-item">
+									<img class="photo" src="../../resources/images/teacher/sample01.png" alt="">
+									<dl class="info">
+										<dt>김연수</dt>
+										<dd>#기초회화 #TSC #발음/성조 #중문법 #리딩 #발음교정 #고급회화 #HSK3~5급</dd>
+									</dl>
+									<div class="btn-area">
+										<a href="#" class="btn">수업신청하기</a>
+									</div>
 								</div>
 							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="teacher-item">
-								<img class="photo" src="../../resources/images/teacher/sample01.png" alt="">
-								<dl class="info">
-									<dt>김연수</dt>
-									<dd>#기초회화 #TSC #발음/성조 #중문법 #리딩 #발음교정 #고급회화 #HSK3~5급</dd>
-								</dl>
-								<div class="btn-area">
-									<a href="#" class="btn">수업신청하기</a>
+							<div class="swiper-slide">
+								<div class="teacher-item">
+									<img class="photo" src="../../resources/images/teacher/sample01.png" alt="">
+									<dl class="info">
+										<dt>김연수</dt>
+										<dd>#기초회화 #TSC #발음/성조 #중문법 #리딩 #발음교정 #고급회화 #HSK3~5급</dd>
+									</dl>
+									<div class="btn-area">
+										<a href="#" class="btn">수업신청하기</a>
+									</div>
 								</div>
 							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="teacher-item">
-								<img class="photo" src="../../resources/images/teacher/sample01.png" alt="">
-								<dl class="info">
-									<dt>김연수</dt>
-									<dd>#기초회화 #TSC #발음/성조 #중문법 #리딩 #발음교정 #고급회화 #HSK3~5급</dd>
-								</dl>
-								<div class="btn-area">
-									<a href="#" class="btn">수업신청하기</a>
+							<div class="swiper-slide">
+								<div class="teacher-item">
+									<img class="photo" src="../../resources/images/teacher/sample01.png" alt="">
+									<dl class="info">
+										<dt>김연수</dt>
+										<dd>#기초회화 #TSC #발음/성조 #중문법 #리딩 #발음교정 #고급회화 #HSK3~5급</dd>
+									</dl>
+									<div class="btn-area">
+										<a href="#" class="btn">수업신청하기</a>
+									</div>
 								</div>
 							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="teacher-item">
-								<img class="photo" src="../../resources/images/teacher/sample01.png" alt="">
-								<dl class="info">
-									<dt>김연수</dt>
-									<dd>#기초회화 #TSC #발음/성조 #중문법 #리딩 #발음교정 #고급회화 #HSK3~5급</dd>
-								</dl>
-								<div class="btn-area">
-									<a href="#" class="btn">수업신청하기</a>
+							<div class="swiper-slide">
+								<div class="teacher-item">
+									<img class="photo" src="../../resources/images/teacher/sample01.png" alt="">
+									<dl class="info">
+										<dt>김연수</dt>
+										<dd>#기초회화 #TSC #발음/성조 #중문법 #리딩 #발음교정 #고급회화 #HSK3~5급</dd>
+									</dl>
+									<div class="btn-area">
+										<a href="#" class="btn">수업신청하기</a>
+									</div>
 								</div>
 							</div>
-						</div>
-					</div>				
+							<div class="swiper-slide">
+								<div class="teacher-item">
+									<img class="photo" src="../../resources/images/teacher/sample01.png" alt="">
+									<dl class="info">
+										<dt>김연수</dt>
+										<dd>#기초회화 #TSC #발음/성조 #중문법 #리딩 #발음교정 #고급회화 #HSK3~5급</dd>
+									</dl>
+									<div class="btn-area">
+										<a href="#" class="btn">수업신청하기</a>
+									</div>
+								</div>
+							</div>
+						</div>				
+						
+					</div>
 					<div class="swiper-button-prev"></div>
 					<div class="swiper-button-next"></div>
+					<div class="btn-area line">
+						<button type="button" class="btn-gold type-more">
+							<span>+</span>
+						</button>
+					</div>
 				</div>
 				
 
@@ -161,9 +181,9 @@
 				var teacherSwiper = new Swiper('.teacher-swiper', {
 					slidesPerView: 4,
 					spaceBetween: 0,
-					pagination: {
-						el: '.swiper-pagination',
-						clickable: true,
+					navigation: {
+						nextEl: '.teacher-list .swiper-button-next',
+						prevEl: '.teacher-list .swiper-button-prev',
 					},
 				});
 
