--- a/html/main/main.html
+++ b/html/main/main.html
@@ -39,27 +39,61 @@
 							<button type="button" class="btn-dep-1"><span>영어</span></button>
 							<div class="dep-2">
 								<button type="button" class="btn-gold selected">
-									<span>수능/내신</span>
-								</button>
+									<span>내신/수능</span>
+								</button>  
 								<button type="button" class="btn-gold">
-									<span>리딩/작문</span>
-								</button>
+									<span>주니어</span>
+								</button>  
 								<button type="button" class="btn-gold">
-									<span>문법</span>
-								</button>
+									<span>일상/여행 회화</span>
+								</button>  
 								<button type="button" class="btn-gold">
-									<span>고급회화</span>
-								</button>
+									<span>비즈니스/직장</span>
+								</button> 
 								<button type="button" class="btn-gold">
-									<span>회화</span>
-								</button>
+									<span>강사준비</span>
+								</button> 
 								<button type="button" class="btn-gold">
-									<span>비지니스회화</span>
+									<span>발음/프리토킹</span>
+								</button> 
+								<button type="button" class="btn-gold">
+									<span>TOEIC/시험</span>
+								</button> 
+								<button type="button" class="btn-gold">
+									<span>맞춤강의</span>
 								</button>
+									
 							</div>
 						</li>
 						<li class="n2">
 							<button type="button" class="btn-dep-1"><span>중국어</span></button>
+							<div class="dep-2">
+								<button type="button" class="btn-gold selected">
+									<span>HSK/시험</span>
+								</button>
+								<button type="button" class="btn-gold">
+									<span>비즈니스/직장</span>
+								</button>
+								<button type="button" class="btn-gold">
+									<span>내신/수능</span>
+								</button>
+								<button type="button" class="btn-gold">
+									<span>주니어</span>
+								</button>
+								<button type="button" class="btn-gold">
+									<span>강사준비</span>
+								</button>
+								<button type="button" class="btn-gold">
+									<span>일상/여행 회화</span>
+								</button>
+								<button type="button" class="btn-gold">
+									<span>발음/성조</span>
+								</button>
+								<button type="button" class="btn-gold">
+									<span>맞춤강의</span>
+								</button>
+									
+							</div>
 						</li>
 						<li class="n3">
 							<button type="button" class="btn-dep-1"><span>리더</span></button>
