--- a/html/main/main.html
+++ b/html/main/main.html
@@ -106,6 +106,7 @@
 					<div class="teacher-swiper">
 						<div>
 							<div class="teacher-item">
+								<em class="ico-matching"><span class="blind">매칭</span></em>
 								<img class="photo" src="../../resources/images/teacher/sample01.png" alt="">
 								<dl class="info">
 									<dt>김연수</dt>
