이용 후기 추가

--- a/html/main/main.html
+++ b/html/main/main.html
@@ -200,6 +200,123 @@
 						</div>
 					</div>
 				</section>
+
+				<section class="section-b">
+					<div class="review-area active">
+						<div class="review-item">
+							<div class="t-img"><img src="../../resources/images/temp/@t-img02.png" alt=""></div>
+							<div class="review-summery">
+								<div class="hash-tag">
+									<span class="tag-item">#영어</span>
+									<span class="tag-item">#내신/수능</span>
+								</div>
+								<div class="star-area">
+									<span class="box-star"><span class="star-data" style="width:100%"></span></span>
+								</div>
+								<p class="txt-review">친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  <br>수업 퀄리티가 너무 좋네요! 역시… 리더 짱!!<br>
+									Oh my goodness! 집중력이 달라진다..</p>
+								<p class="writer-data">
+									<span class="writer-id">zhe***</span>
+									<span class="write-day">2021-02-05</span>
+								</p>
+							</div>
+							<button type="button" class="btn-more"><span class="for-a11y">내용보기</span></button>
+						</div>
+						<div class="review-detail">
+							<p class="txt-review">친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! Oh my goodness! 집중력이 달라진다..친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  좋네요!<br>
+								Oh my goodness! 집중력이 달라진다..<br>
+								친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! 짱!!<br>
+								친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! Oh my goodness! 집중력이 달라진다..친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  좋네요!<br>
+								Oh my goodness! 집중력이 달라진다..<br>
+								친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! 짱!!</p>
+							<button type="button" class="btn-review-close"><span class="for-a11y">닫기</span></button>
+						</div>
+					</div>
+					<div class="review-area">
+						<div class="review-item">
+							<div class="t-img"><img src="../../resources/images/temp/@t-img01.png" alt=""></div>
+							<div class="review-summery">
+								<div class="hash-tag">
+									<span class="tag-item">#영어</span>
+									<span class="tag-item">#내신/수능</span>
+								</div>
+								<div class="star-area">
+									<span class="box-star"><span class="star-data" style="width:80%"></span></span>
+								</div>
+								<p class="txt-review">친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  <br>수업 퀄리티가 너무 좋네요! 역시… 리더 짱!!<br>
+									Oh my goodness! 집중력이 달라진다..</p>
+								<p class="writer-data">
+									<span class="writer-id">zhe***</span>
+									<span class="write-day">2021-02-05</span>
+								</p>
+							</div>
+							<button type="button" class="btn-more"><span class="for-a11y">내용보기</span></button>
+						</div>
+						<div class="review-detail">
+							<p class="txt-review">친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! Oh my goodness! 집중력이 달라진다..친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  좋네요!<br>
+								Oh my goodness! 집중력이 달라진다..<br>
+								친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! 짱!! </p>
+							<button type="button" class="btn-review-close"><span class="for-a11y">닫기</span></button>
+						</div>
+					</div>
+					<div class="review-area">
+						<div class="review-item">
+							<div class="t-img"><img src="../../resources/images/temp/@t-img02.png" alt=""></div>
+							<div class="review-summery">
+								<div class="hash-tag">
+									<span class="tag-item">#영어</span>
+									<span class="tag-item">#내신/수능</span>
+								</div>
+								<div class="star-area">
+									<span class="box-star"><span class="star-data" style="width:100%"></span></span>
+								</div>
+								<p class="txt-review">친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  <br>수업 퀄리티가 너무 좋네요! 역시… 리더 짱!!<br>
+									Oh my goodness! 집중력이 달라진다..</p>
+								<p class="writer-data">
+									<span class="writer-id">zhe***</span>
+									<span class="write-day">2021-02-05</span>
+								</p>
+							</div>
+							<button type="button" class="btn-more"><span class="for-a11y">내용보기</span></button>
+						</div>
+						<div class="review-detail">
+							<p class="txt-review">친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! Oh my goodness! 집중력이 달라진다..친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  좋네요!<br>
+								Oh my goodness! 집중력이 달라진다..<br>
+								친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! 짱!!<br>
+								친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! Oh my goodness! 집중력이 달라진다..친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  좋네요!<br>
+								Oh my goodness! 집중력이 달라진다..<br>
+								친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! 짱!!</p>
+							<button type="button" class="btn-review-close"><span class="for-a11y">닫기</span></button>
+						</div>
+					</div>
+					<div class="review-area">
+						<div class="review-item">
+							<div class="t-img"><img src="../../resources/images/temp/@t-img01.png" alt=""></div>
+							<div class="review-summery">
+								<div class="hash-tag">
+									<span class="tag-item">#영어</span>
+									<span class="tag-item">#내신/수능</span>
+								</div>
+								<div class="star-area">
+									<span class="box-star"><span class="star-data" style="width:80%"></span></span>
+								</div>
+								<p class="txt-review">친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  <br>수업 퀄리티가 너무 좋네요! 역시… 리더 짱!!<br>
+									Oh my goodness! 집중력이 달라진다..</p>
+								<p class="writer-data">
+									<span class="writer-id">zhe***</span>
+									<span class="write-day">2021-02-05</span>
+								</p>
+							</div>
+							<button type="button" class="btn-more"><span class="for-a11y">내용보기</span></button>
+						</div>
+						<div class="review-detail">
+							<p class="txt-review">친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! Oh my goodness! 집중력이 달라진다..친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  좋네요!<br>
+								Oh my goodness! 집중력이 달라진다..<br>
+								친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! 짱!! </p>
+							<button type="button" class="btn-review-close"><span class="for-a11y">닫기</span></button>
+						</div>
+					</div>
+				</section>
 			</article>
 		</main>
         <footer class="base-footer">
