이용 후기 추가

--- a/html/main/main.html
+++ b/html/main/main.html
@@ -202,7 +202,7 @@
 				</section>
 
 				<section class="section-b">
-					<div class="review-area active">
+					<div class="review-area active"><!-- D : 선택시 [active] class add -->
 						<div class="review-item">
 							<div class="t-img"><img src="../../resources/images/temp/@t-img02.png" alt=""></div>
 							<div class="review-summery">
