--- a/html/main/main.html
+++ b/html/main/main.html
@@ -23,7 +23,7 @@
 	<script src="../../resources/js/lib/slick.js"></script>
 </head>
 
-<body>	
+<body class="page-main">	
 	<div class="base-wrap">
 		<header class="base-header">
 		</header>
