강사 풋터 이미지 변경

--- a/html/main/leader.html
+++ b/html/main/leader.html
@@ -53,7 +53,7 @@
 
 			
 		</main>
-        <footer class="base-footer">
+        <footer class="base-footer type-b">
             
         </footer>
 	</div>
