--- a/html/main/main.html
+++ b/html/main/main.html
@@ -202,7 +202,7 @@
 				</section>
 
 				<section class="section-b">
-					<div class="review-area active"><!-- D : 선택시 [active] class add -->
+					<div class="review-area"><!-- D : 선택시 [active] class add -->
 						<div class="review-item">
 							<div class="t-img"><img src="../../resources/images/temp/@t-img02.png" alt=""></div>
 							<div class="review-summery">
@@ -338,7 +338,13 @@
 				
 				$('.teacher-menu .btn-dep-1').off('click.tc').on('click.tc', function(){
 					$(this).closest('li').addClass('on').siblings('li').removeClass('on');
-				})
+				});
+				$('.review-item .btn-more').off('click.rv').on('click.rv', function(){
+					$(this).closest('.review-area').addClass('active').siblings('.review-area').removeClass('active');
+				});
+				$('.review-area .btn-review-close').off('click.rv').on('click.rv', function(){
+					$(this).closest('.review-area').removeClass('active');
+				});
 			});
 		
 		})(jQuery, window, document);
