--- a/html/main/leader.html
+++ b/html/main/leader.html
@@ -32,21 +32,45 @@
 				<img class="photo" src="../../resources/images/teacher/sample01-detail.png" alt="맞춤형 프리미엄 학습 코디 TERA Study">
 				<div class="group">
 					<h2>
-						중국어<br>
+						<span>중국어</span>
 						<em>祝你梦想成真</em>
 					</h2>
 					<p>완벽한 발음으로 기초부터 탄탄하게 <br>중국어 완전 정복</p>
+					<div class="tag">
+						<span>#기초회화</span>
+						<span>#TSC</span>
+						<span>#발음/성조</span>
+						<span>#중문법</span>
+						<span>#리딩</span>
+						<span>#발음교정</span>
+						<span>#고급회화</span>
+						<span>#HSK3~5급</span>
+					</div>
 				</div>
-				<div class="tag">
-					<span>#기초회화</span>
-					<span>#TSC</span>
-					<span>#발음/성조</span>
-					<span>#중문법</span>
-					<span>#리딩</span>
-					<span>#발음교정</span>
-					<span>#고급회화</span>
-					<span>#HSK3~5급</span>
+
+				<div class="chara">
+					<div class="chara-item">
+						<span class="ico"></span>
+						<span class="txt">자신감 있는 발음</span>
+					</div>
+					<div class="chara-item">
+						<span class="ico"></span>
+						<span class="txt">원어민 같은 회화</span>
+					</div>
+					<div class="chara-item">
+						<span class="ico"></span>
+						<span class="txt">매 수업 후 피드백</span>
+					</div>
+					<div class="chara-item">
+						<span class="ico"></span>
+						<span class="txt">매시간강의 보충자료 제공</span>
+					</div>
+					<div class="chara-item">
+						<span class="ico"></span>
+						<span class="txt">4회차수업 후 레벨 평가</span>
+					</div>
 				</div>
+				
 
 			</section>
 			
