--- a/html/main/leader.html
+++ b/html/main/leader.html
@@ -53,22 +53,36 @@
 						<span class="ico"></span>
 						<span class="txt">자신감 있는 발음</span>
 					</div>
+					<div class="line"></div>
+
 					<div class="chara-item">
 						<span class="ico"></span>
 						<span class="txt">원어민 같은 회화</span>
 					</div>
+					<div class="line"></div>
+
 					<div class="chara-item">
 						<span class="ico"></span>
 						<span class="txt">매 수업 후 피드백</span>
 					</div>
+					<div class="line"></div>
+
 					<div class="chara-item">
 						<span class="ico"></span>
 						<span class="txt">매시간강의 보충자료 제공</span>
 					</div>
+					<div class="line"></div>
+
 					<div class="chara-item">
 						<span class="ico"></span>
 						<span class="txt">4회차수업 후 레벨 평가</span>
 					</div>
+				</div>
+
+				<div class="btn-area">
+					<a href="#" class="btn-gold">
+						<span>유재진 리더와 화상 수업하기</span>
+					</a>
 				</div>
 				
 
