--- a/html/inc/header.html
+++ b/html/inc/header.html
@@ -6,4 +6,10 @@
         <a href="#" class="util-n1"><span class="blind">로그인</span></a>
         <a href="#" class="util-n2"><span class="blind">회원가입</span></a>
     </div>
+    <div class="goldkey">
+        <img class="key-line" src="../../resources/images/common/key-line.png" alt="">
+        <button type="button" class="key" >
+            <span class="blind">황금열쇠</span>
+        </button>
+    </div>
 </div>
