--- a/html/main/leader.html
+++ b/html/main/leader.html
@@ -287,9 +287,9 @@
                 </div>
 			</section>
 		</main>
-        <footer class="base-footer type-b">
-            
-        </footer>
+        <footer class="base-footer type-b"></footer>
+
+		<div class="base-goldkey"></div>
 	</div>
 
 	<script>
