--- a/html/main/main.html
+++ b/html/main/main.html
@@ -33,7 +33,7 @@
 					차별화된 <strong>1:1 맞춤형 수업,</strong><br>
 					<span class="logo-text">TERA <b>Study</b></span>에서 경험하실 수 있습니다.
 				</h2>
-				<div class="teacher-menu">
+				<nav class="teacher-menu">
 					<ul class="dep-1">
 						<li class="n1 on">
 							<button type="button" class="btn-dep-1"><span>영어</span></button>
@@ -100,7 +100,7 @@
 							<button type="button" class="btn-dep-1" disabled><span>리더</span></button>
 						</li> -->
 					</ul>
-				</div>
+				</nav>
 
 				<div class="teacher-list">
 					<div class="teacher-swiper">
