--- a/html/inc/goldkey.html
+++ b/html/inc/goldkey.html
@@ -76,7 +76,7 @@
                         </div>
                     </li>
                     <li class="n3 on">
-                        <button type="button" class="btn-dep-1" disabled><span>리더</span></button>
+                        <button type="button" class="btn-dep-1"><span>리더</span></button>
                     </li>
                 </ul>
             </nav>
