--- a/html/main/main.html
+++ b/html/main/main.html
@@ -487,6 +487,10 @@
 						settings: { slidesToShow: 3 } 
 					}, 
 					{ 
+						breakpoint: 760, 
+						settings: { slidesToShow: 2 } 
+					}, 
+					{ 
 						breakpoint: 620, 
 						settings: { slidesToShow: 1 } 
 					} ]
