--- a/html/inc/footer.html
+++ b/html/inc/footer.html
@@ -21,4 +21,8 @@
             <span class="copy-item">E-mail : jihun6693@cts.tv</span>
         </p>
     </div>
+    <div class="side-nav">
+        <button type="button" class="btn-top"><span class="for-a11y">TOP</span></button>
+        <button type="button" class="btn-kakao"><span class="for-a11y">kakao</span></button>
+    </div>
 </div>
