--- a/html/main/leader.html
+++ b/html/main/leader.html
@@ -21,9 +21,12 @@
 
 	<link rel="stylesheet" href="../../resources/js/lib/slick.css" />
 	<script src="../../resources/js/lib/slick.js"></script>
+	<style>
+
+	</style>
 </head>
 
-<body>	
+<body class="bg-none page-leader">	
 	<div class="base-wrap">
 		<header class="base-header">
 		</header>
