팝업 강사 리스트 수정

--- a/html/inc/goldkey.html
+++ b/html/inc/goldkey.html
@@ -102,7 +102,7 @@
                             <img class="photo" src="../../resources/images/teacher/sample01.png" alt="">
                             <dl class="info">
                                 <dt>김연수</dt>
-                                <dd>#기초회화 #TSC #발음/성조 #중문법 #리딩 #발음교정 #고급회화 #HSK3~5급</dd>
+                                <dd>#기초회화 #TSC #발음/성조 #중문법 </dd>
                             </dl>
                             <div class="btn-area">
                                 <a href="#" class="btn">수업신청하기</a>
