--- a/html/sub/login.html
+++ b/html/sub/login.html
@@ -31,7 +31,13 @@
 		<header class="base-header">
 		</header>
 		<main class="base-body-a">
+			<div class="base-container">
+				<section class="login-box">
+					<div class="login-area">
 
+					</div>
+				</section>
+			</div>
 		</main>
         <footer class="base-footer type-b"></footer>
 
