--- a/html/sub/login.html
+++ b/html/sub/login.html
@@ -26,12 +26,20 @@
 	</style>
 </head>
 
-<body class="bg-none page-leader">	
+<body class="bg-none page-sub">	
 	<div class="base-wrap">
 		<header class="base-header">
 		</header>
-		<main class="base-body-a">
-
+		<main class="base-body-a" style="min-height: 500px;">
+			<div class="title-group">
+				<h2>
+					<span>로그인</span>
+				</h2>
+				<p>
+					프리미엄 강사진과 프리미엄 컨설팅의 <br>
+					<em>비대면 수업 TERA STUDY</em>
+				</p>
+			</div>
 		</main>
         <footer class="base-footer type-b"></footer>
 
