--- a/html/sub/login.html
+++ b/html/sub/login.html
@@ -33,9 +33,7 @@
 		<main class="base-body-a">
 			<div class="base-container">
 				<div class="title-group">
-					<h2>
-						<span>로그인</span>
-					</h2>
+					<h2>로그인</h2>
 					<p>
 						프리미엄 강사진과 프리미엄 컨설팅의 <br>
 						<em>비대면 수업 TERA STUDY</em>
@@ -47,6 +45,10 @@
 
 					</div>
 				</section>
+
+				<div class="ajax-banner">
+					
+				</div>
 			</div>
 		</main>
         <footer class="base-footer type-b"></footer>
