--- a/html/sub/login.html
+++ b/html/sub/login.html
@@ -34,12 +34,31 @@
 			<div class="base-container">
 				<section class="login-box">
 					<div class="login-area">
-
+						<div class="form-item">
+							<div class="form-col-a"><label for="login-id">아이디</label></div>
+							<div class="form-col-b"><input type="text" id="login-id" class="input-a"></div>
+						</div>
+						<div class="form-item">
+							<div class="form-col-a"><label for="login-pw">비밀번호</label></div>
+							<div class="form-col-b"><input type="password" id="login-pw" class="input-a"></div>
+						</div>
+						<button type="button" class="btn-gold big">
+							<span>로그인</span>
+						</button>
 					</div>
 				</section>
+				<div class="login-other">
+					<div class="other-item">
+						<span class="box-checkbox-a"><input type="checkbox" class="form-checkbox" id="login-ck"><label for="login-ck">자동로그인</label></span>
+						<span class="box-checkbox-a"><input type="checkbox" class="form-checkbox" id="id-save"><label for="id-save">아이디 저장</label></span>
+					</div>
+					<div class="other-item">
+						<a href="" class="link-join"><span class="link-txt">회원가입</span></a>
+					</div>
+				</div>
 			</div>
 		</main>
-        <footer class="base-footer type-b"></footer>
+        <footer class="base-footer"></footer>
 
 		<div class="base-goldkey"></div>
 	</div>
