--- a/html/sub/login.html
+++ b/html/sub/login.html
@@ -26,7 +26,7 @@
 	</style>
 </head>
 
-<body class="bg-none page-sub">	
+<body class="page-sub">	
 	<div class="base-wrap">
 		<header class="base-header">
 		</header>
