class name change

--- a/html/sub/login.html
+++ b/html/sub/login.html
@@ -42,7 +42,7 @@
 					</p>
 				</div>
 
-				<section class="login-box">
+				<section class="box-a">
 					<div class="login-area">
 						<div class="form-item">
 							<div class="form-col-a"><label for="login-id">아이디</label></div>
