--- a/html/sub/join.html
+++ b/html/sub/join.html
@@ -111,7 +111,7 @@
 									<button type="button" class="btn-folding">약관보기</button>
 								</div>
 								<div class="agree-content">
-
+									<div class="terms-a"></div>
 								</div>
 							</div>
 							<div class="agree-item">
@@ -120,7 +120,7 @@
 									<button type="button" class="btn-folding">약관보기</button>
 								</div>
 								<div class="agree-content">
-
+									<div class="terms-b"></div>
 								</div>
 							</div>
 							<div class="agree-item">
@@ -129,7 +129,7 @@
 									<button type="button" class="btn-folding">약관보기</button>
 								</div>
 								<div class="agree-content">
-
+									<div class="terms-c"></div>
 								</div>
 							</div>
 						</div>
