회원가입 완료

--- a/html/sub/join.html
+++ b/html/sub/join.html
@@ -95,7 +95,7 @@
 									<div class="form-col-b"><input type="email" id="join-email2" class="input-a"></div>
 								</div>
 							</div>
-							<div class="form-col-d">
+							<div class="form-col-select">
 								<select name="" id="" class="form-select">
 									<option value="">직접입력</option>
 								</select>
