--- a/html/index.html
+++ b/html/index.html
@@ -14,13 +14,13 @@
 
     <title>테라스터디</title>
 
-	<link rel="stylesheet" href="../../resources/css/ui.base.css">
-	<script src="../../resources/js/lib/jquery-1.12.4.min.js"></script>
-	<script src="../../resources/js/ui.global.js"></script>
-	<script src="../../resources/js/ui.common.js"></script>
+	<link rel="stylesheet" href="../resources/css/ui.base.css">
+	<script src="../resources/js/lib/jquery-1.12.4.min.js"></script>
+	<script src="../resources/js/ui.global.js"></script>
+	<script src="../resources/js/ui.common.js"></script>
 
-	<link rel="stylesheet" href="../../resources/js/lib/slick.css" />
-	<script src="../../resources/js/lib/slick.js"></script>
+	<link rel="stylesheet" href="../resources/js/lib/slick.css" />
+	<script src="../resources/js/lib/slick.js"></script>
     <style>
         .page-codinglist{
             background:#fff;
