--- a/html/sub/mypage04.html
+++ b/html/sub/mypage04.html
@@ -45,78 +45,82 @@
 				<section class="box-list-a">
 					<!-- S : box-item -->
 					<div class="box-item-a">
-						<div class="leader-info-a">
-							<div class="leader-img"><img src="../../resources/images/temp/@t-img06.png" alt=""></div>
-							<p class="leader-summery"><span class="subject">영어</span><span class="name">김연수</span></p>
-						</div>
-						<div class="box-content">
-							<dl class="content-item">
-								<dt class="content-title">강의정보</dt>
-								<dd class="content-data">
-									<p class="data-title">1회 30분(총4회) 강의 기본</p>
-									<p class="data-txt">
-										<span class="data-item">월 오후 14:00~14:30</span>
-										<span class="data-item">화 오전 10:00~10:30</span>
-										<span class="data-item">수 오전 10:00~10:30</span>
-										<span class="data-item">목 오전 10:00~10:30</span>
-										<span class="data-item">금 오전 10:00~10:30</span>
-										<span class="data-item">토 오후 14:00~14:30</span>
-										<span class="data-item">일 오전 10:00~10:30</span>
-									</p>
-								</dd>
-							</dl>
-							<dl class="content-item">
-								<dt class="content-title">평가내용</dt>
-								<dd class="content-data">
-									<div class="review-data">
-										<div class="star-area"><span class="box-star"><span class="star-data" style="width:100%"></span></span></div>
-										<p class="txt-review">친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! Oh my goodness! 집중력이 달라진다..친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  좋네요! Oh my goodness! 집중력이 달라진다. 친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! 짱!!</p>
-									</div>
-								</dd>
-							</dl>
-							<p class="writer-data">
-								<span class="writer-id">zhe***</span>
-								<span class="write-day">2021-02-05</span>
-							</p>
-						</div>
+						<a href="" class="link-review">
+							<div class="leader-info-a">
+								<div class="leader-img"><img src="../../resources/images/temp/@t-img06.png" alt=""></div>
+								<p class="leader-summery"><span class="subject">영어</span><span class="name">김연수</span></p>
+							</div>
+							<div class="box-content">
+								<dl class="content-item">
+									<dt class="content-title">강의정보</dt>
+									<dd class="content-data">
+										<p class="data-title">1회 30분(총4회) 강의 기본</p>
+										<p class="data-txt">
+											<span class="data-item">월 오후 14:00~14:30</span>
+											<span class="data-item">화 오전 10:00~10:30</span>
+											<span class="data-item">수 오전 10:00~10:30</span>
+											<span class="data-item">목 오전 10:00~10:30</span>
+											<span class="data-item">금 오전 10:00~10:30</span>
+											<span class="data-item">토 오후 14:00~14:30</span>
+											<span class="data-item">일 오전 10:00~10:30</span>
+										</p>
+									</dd>
+								</dl>
+								<dl class="content-item">
+									<dt class="content-title">평가내용</dt>
+									<dd class="content-data">
+										<div class="review-data">
+											<div class="star-area"><span class="box-star"><span class="star-data" style="width:100%"></span></span></div>
+											<p class="txt-review">친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! Oh my goodness! 집중력이 달라진다..친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  좋네요! Oh my goodness! 집중력이 달라진다. 친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! 짱!!</p>
+										</div>
+									</dd>
+								</dl>
+								<p class="writer-data">
+									<span class="writer-id">zhe***</span>
+									<span class="write-day">2021-02-05</span>
+								</p>
+							</div>
+						</a>
 					</div>
 					<!-- E : box-item -->
 					<!-- S : box-item -->
 					<div class="box-item-a">
-						<div class="leader-info-a">
-							<div class="leader-img"><img src="../../resources/images/temp/@t-img06.png" alt=""></div>
-							<p class="leader-summery"><span class="subject">영어</span><span class="name">김연수</span></p>
-						</div>
-						<div class="box-content">
-							<dl class="content-item">
-								<dt class="content-title">강의정보</dt>
-								<dd class="content-data">
-									<p class="data-title">1회 30분(총4회) 강의 기본</p>
-									<p class="data-txt">
-										<span class="data-item">월 오후 14:00~14:30</span>
-										<span class="data-item">화 오전 10:00~10:30</span>
-										<span class="data-item">수 오전 10:00~10:30</span>
-										<span class="data-item">목 오전 10:00~10:30</span>
-										<span class="data-item">금 오전 10:00~10:30</span>
-										<span class="data-item">토 오후 14:00~14:30</span>
-										<span class="data-item">일 오전 10:00~10:30</span>
-									</p>
-								</dd>
-							</dl>
-							<dl class="content-item">
-								<dt class="content-title">평가내용</dt>
-								<dd class="content-data">
-									<div class="review-data">
-										<div class="star-area"><span class="box-star"><span class="star-data" style="width:100%"></span></span></div>
-										<p class="txt-review">친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! Oh my goodness! 집중력이 달라진다..친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  좋네요! Oh my goodness! 집중력이 달라진다. 친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! 짱!!</p>
-									</div>
-								</dd>
-							</dl>
-							<p class="writer-data">
-								<span class="writer-id">zhe***</span>
-								<span class="write-day">2021-02-05</span>
-							</p>
-						</div>
+						<a href="" class="link-review">
+							<div class="leader-info-a">
+								<div class="leader-img"><img src="../../resources/images/temp/@t-img06.png" alt=""></div>
+								<p class="leader-summery"><span class="subject">영어</span><span class="name">김연수</span></p>
+							</div>
+							<div class="box-content">
+								<dl class="content-item">
+									<dt class="content-title">강의정보</dt>
+									<dd class="content-data">
+										<p class="data-title">1회 30분(총4회) 강의 기본</p>
+										<p class="data-txt">
+											<span class="data-item">월 오후 14:00~14:30</span>
+											<span class="data-item">화 오전 10:00~10:30</span>
+											<span class="data-item">수 오전 10:00~10:30</span>
+											<span class="data-item">목 오전 10:00~10:30</span>
+											<span class="data-item">금 오전 10:00~10:30</span>
+											<span class="data-item">토 오후 14:00~14:30</span>
+											<span class="data-item">일 오전 10:00~10:30</span>
+										</p>
+									</dd>
+								</dl>
+								<dl class="content-item">
+									<dt class="content-title">평가내용</dt>
+									<dd class="content-data">
+										<div class="review-data">
+											<div class="star-area"><span class="box-star"><span class="star-data" style="width:100%"></span></span></div>
+											<p class="txt-review">친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! Oh my goodness! 집중력이 달라진다..친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  좋네요! Oh my goodness! 집중력이 달라진다. 친절하고 이해하기 쉽게 가르쳐주셔서 너무 좋아요!  수업 퀄리티가 너무 좋네요! 역시… 리더 짱!! 짱!!</p>
+										</div>
+									</dd>
+								</dl>
+								<p class="writer-data">
+									<span class="writer-id">zhe***</span>
+									<span class="write-day">2021-02-05</span>
+								</p>
+							</div>
+						</a>
 					</div>
 					<!-- E : box-item -->
 				</section>
