--- a/html/sub/mypage04.html
+++ b/html/sub/mypage04.html
@@ -48,13 +48,13 @@
 						<a href="" class="link-review">
 							<div class="leader-info-a">
 								<div class="leader-img"><img src="../../resources/images/temp/@t-img06.png" alt=""></div>
-								<p class="leader-summery"><span class="subject">영어</span><span class="name">김연수</span></p>
+								<p class="leader-name">김연수</p>
 							</div>
 							<div class="box-content">
 								<dl class="content-item">
 									<dt class="content-title">강의정보</dt>
 									<dd class="content-data">
-										<p class="data-title">1회 30분(총4회) 강의 기본</p>
+										<p class="data-title"><span class="subject">영어</span>1회 30분(총4회) 강의 기본</p>
 										<p class="data-txt">
 											<span class="data-item">월 오후 14:00~14:30</span>
 											<span class="data-item">화 오전 10:00~10:30</span>
@@ -88,13 +88,13 @@
 						<a href="" class="link-review">
 							<div class="leader-info-a">
 								<div class="leader-img"><img src="../../resources/images/temp/@t-img06.png" alt=""></div>
-								<p class="leader-summery"><span class="subject">영어</span><span class="name">김연수</span></p>
+								<p class="leader-name">김연수</p>
 							</div>
 							<div class="box-content">
 								<dl class="content-item">
 									<dt class="content-title">강의정보</dt>
 									<dd class="content-data">
-										<p class="data-title">1회 30분(총4회) 강의 기본</p>
+										<p class="data-title"><span class="subject">영어</span>1회 30분(총4회) 강의 기본</p>
 										<p class="data-txt">
 											<span class="data-item">월 오후 14:00~14:30</span>
 											<span class="data-item">화 오전 10:00~10:30</span>
