--- a/html/sub/mypage04.html
+++ b/html/sub/mypage04.html
@@ -48,7 +48,7 @@
 						<a href="" class="link-review">
 							<div class="leader-info-a">
 								<div class="leader-img"><img src="../../resources/images/temp/@t-img06.png" alt=""></div>
-								<p class="leader-name">김연수</p>
+								<p class="leader-name">김연수 리더</p>
 							</div>
 							<div class="box-content">
 								<dl class="content-item">
@@ -88,7 +88,7 @@
 						<a href="" class="link-review">
 							<div class="leader-info-a">
 								<div class="leader-img"><img src="../../resources/images/temp/@t-img06.png" alt=""></div>
-								<p class="leader-name">김연수</p>
+								<p class="leader-name">김연수 리더</p>
 							</div>
 							<div class="box-content">
 								<dl class="content-item">
