수강후기 검색영역 추가

--- a/html/sub/mypage04.html
+++ b/html/sub/mypage04.html
@@ -41,6 +41,32 @@
 						<em>TERA STUDY 프리미엄 회원</em>
 					</p>
 				</div>
+				<section class="search-area">
+					<fieldset>
+						<legend class="for-a11y">검색</legend>
+						<div class="box-search-a">
+							<div class="search-col-a">
+								<div class="form-item">
+									<div class="form-col-d">
+										<select name="" id="" class="form-select">
+											<option value="">전체</option>
+										</select>
+									</div>
+									<div class="form-col-e">
+										<input type="text" class="input-a" placeholder="제목/내용/작성자 입력">
+									</div>
+									<div class="form-col-btns">
+										<button type="button" class="btn-type-c">검색</button>
+										<button type="button" class="btn-type-d">초기화</button>
+									</div>
+								</div>
+							</div>
+							<div class="search-col-btn">
+								<a href="" class="btn-type-b">수강후기 등록</a>
+							</div>
+						</div>
+					</fieldset>
+				</section>
 
 				<section class="box-list-a">
 					<!-- S : box-item -->
