--- a/html/sub/leader.html
+++ b/html/sub/leader.html
@@ -26,7 +26,7 @@
 	</style>
 </head>
 
-<body class="bg-none page-leader">	
+<body class="bg-none page-leader">
 	<div class="base-wrap">
 		<header class="base-header">
 		</header>
@@ -50,11 +50,8 @@
 						<span>#발음교정</span>
 						<span>#고급회화</span>
 						<span>#HSK3~5급</span>
-
 					</div>
 				</div>
-
-				
 
 				<div class="chara">
 					<div class="chara-item">
@@ -298,6 +295,7 @@
         <footer class="base-footer type-b"></footer>
 
 		<div class="base-goldkey"></div>
+        <div class="base-payment"></div>
 	</div>
 
 	<script>
