--- a/html/sub/mypage04.html
+++ b/html/sub/mypage04.html
@@ -35,10 +35,10 @@
 				<div class="ajax-banner">
 				</div>
 				<div class="title-group">
-					<h2>회원가입</h2>
+					<h2>홍길동 님 <span class="level-01">일반회원</span></h2>
 					<p>
-						1:1 비대면 강의와 최고의 리더를 만나실 수 있는 <br>
-						<em>TERA STUDY 프리미엄 회원</em>
+						보유 포인트<br>
+						<em class="num"><span>992,000</span>p</em>
 					</p>
 				</div>
 				<section class="search-area">
@@ -56,7 +56,7 @@
 										<input type="text" class="input-a" placeholder="제목/내용/작성자 입력">
 									</div>
 									<div class="form-col-btns">
-										<button type="button" class="btn-type-c">검색</button>
+										<button type="button" class="btn-type-c">조회</button>
 										<button type="button" class="btn-type-d">초기화</button>
 									</div>
 								</div>
