--- a/html/sub/mypage03.html
+++ b/html/sub/mypage03.html
@@ -45,41 +45,47 @@
 					<fieldset>
 						<legend class="for-a11y">검색</legend>
 						<div class="box-search-b">
-							<div class="form-item">
-								<div class="form-col-d">
-									<select name="" id="" class="form-select">
-										<option value="">전체</option>
-									</select>
-								</div>
-								<div class="form-col-e">
-									<div class="box-radio-group">
-										<div class="radio-item">
-											<input type="radio" name="periodChoice" id="period1" class="in-radio" checked>
-											<label for="period1" class="radio-label">1주일</label>
-										</div>
-										<div class="radio-item">
-											<input type="radio" name="periodChoice" id="period2" class="in-radio">
-											<label for="period2" class="radio-label">15일</label>
-										</div>
-										<div class="radio-item">
-											<input type="radio" name="periodChoice" id="period3" class="in-radio">
-											<label for="period3" class="radio-label">1개월</label>
+							<div class="search-col-a">
+								<div class="form-item">
+									<div class="form-col-d">
+										<select name="" id="" class="form-select">
+											<option value="">전체</option>
+										</select>
+									</div>
+									<div class="form-col-e">
+										<div class="box-radio-group">
+											<div class="radio-item">
+												<input type="radio" name="periodChoice" id="period1" class="in-radio" checked>
+												<label for="period1" class="radio-label">1주일</label>
+											</div>
+											<div class="radio-item">
+												<input type="radio" name="periodChoice" id="period2" class="in-radio">
+												<label for="period2" class="radio-label">15일</label>
+											</div>
+											<div class="radio-item">
+												<input type="radio" name="periodChoice" id="period3" class="in-radio">
+												<label for="period3" class="radio-label">1개월</label>
+											</div>
 										</div>
 									</div>
 								</div>
-								<div class="form-col-d">
-									<div class="form-group">
-										<div class="form-col-d"><input type="date" class="input-a"></div>
-										<div class="form-col-txt">~</div>
-										<div class="form-col-d"><input type="date" class="input-a"></div>
+							</div>
+							<div class="search-col-b">
+								<div class="form-item">
+									<div class="form-col-d"><input type="date" class="input-a"></div>
+									<div class="form-col-txt">~</div>
+									<div class="form-col-d"><input type="date" class="input-a"></div>
+								</div>
+							</div>
+							<div class="search-col-a">
+								<div class="form-item">
+									<div class="form-col-b">
+										<input type="text" class="input-a" placeholder="제목/내용/작성자 입력">
 									</div>
-								</div>
-								<div class="form-col-b">
-									<input type="text" class="input-a" placeholder="제목/내용/작성자 입력">
-								</div>
-								<div class="form-col-btn">
-									<button type="button" class="btn-type-c">조회</button>
-									<button type="button" class="btn-type-d">초기화</button>
+									<div class="form-col-btn">
+										<button type="button" class="btn-type-c">조회</button>
+										<button type="button" class="btn-type-d">초기화</button>
+									</div>
 								</div>
 							</div>
 						</div>
