--- a/html/sub/mypage06.html
+++ b/html/sub/mypage06.html
@@ -35,25 +35,19 @@
 				<div class="ajax-banner">
 				</div>
 				<div class="title-group">
-					<h2>회원가입</h2>
+					<h2>홍길동 님 <span class="level-01">일반회원</span></h2>
 					<p>
-						1:1 비대면 강의와 최고의 리더를 만나실 수 있는 <br>
-						<em>TERA STUDY 프리미엄 회원</em>
+						보유 포인트<br>
+						<em class="num"><span>992,000</span>p</em>
 					</p>
 				</div>
 
-				<section class="box-a">
+				<section class="box-a big">
 					<div class="join-area">
 						<div class="form-item">
 							<div class="form-col-c"><label for="join-id">아이디</label></div>
-							<div class="form-col-b">
-								<div class="form-group">
-									<div class="form-col-b"><input type="text" id="join-id" class="input-a"></div>
-									<div class="form-col-btn"><button type="button" class="btn-type-a">중복확인</button></div>
-								</div>
-							</div>
+							<div class="form-col-b"><input type="text" id="join-id" class="input-a" value="tera" disabled></div>
 						</div>
-						<p class="error-massage"><span class="error-data">아이디가 너무 짧습니다.</span></p><!-- D : error massage 노출시 -->
 						<div class="form-item">
 							<div class="form-col-c"><label for="join-pw">비밀번호</label></div>
 							<div class="form-col-b"><input type="password" id="join-pw" class="input-a" placeholder="영문자+숫자조합 8~12자리 이하"></div>
@@ -101,41 +95,6 @@
 								</select>
 							</div>
 						</div>
-						<div class="agree-area">
-							<div class="agree-all">
-								<span class="box-checkbox-a"><input type="checkbox" class="form-checkbox" id="agree-a"><label for="agree-a">약관동의</label></span>
-							</div>
-							<div class="agree-item">
-								<div class="agree-title">
-									<span class="box-checkbox-a"><input type="checkbox" class="form-checkbox" id="agree-ck1"><label for="agree-ck1">회원이용약관</label></span>
-									<button type="button" class="btn-folding">약관보기</button>
-								</div>
-								<div class="agree-content">
-									<div class="terms-a"></div>
-								</div>
-							</div>
-							<div class="agree-item">
-								<div class="agree-title">
-									<span class="box-checkbox-a"><input type="checkbox" class="form-checkbox" id="agree-ck2"><label for="agree-ck2">개인정보보호정책</label></span>
-									<button type="button" class="btn-folding">약관보기</button>
-								</div>
-								<div class="agree-content">
-									<div class="terms-b"></div>
-								</div>
-							</div>
-							<div class="agree-item">
-								<div class="agree-title">
-									<span class="box-checkbox-a"><input type="checkbox" class="form-checkbox" id="agree-ck3"><label for="agree-ck3">개인정보 수집이용</label></span>
-									<button type="button" class="btn-folding">약관보기</button>
-								</div>
-								<div class="agree-content">
-									<div class="terms-c"></div>
-								</div>
-							</div>
-						</div>
-						<button type="button" class="btn-gold big">
-							<span>회원가입 완료</span>
-						</button>
 					</div>
 				</section>
 			</div>
