--- a/html/sub/mypage06.html
+++ b/html/sub/mypage06.html
@@ -97,6 +97,10 @@
 						</div>
 					</div>
 				</section>
+				<div class="btn-area-a">
+					<button type="button" class="btn-type-e">취소</button>
+					<button type="button" class="btn-type-c">저장</button>
+				</div>
 			</div>
 		</main>
         <footer class="base-footer"></footer>
