--- a/html/sub/mypage02.html
+++ b/html/sub/mypage02.html
@@ -41,23 +41,13 @@
 						<em class="num"><span>992,000</span>p</em>
 					</p>
 				</div>
-				
 				<div class="tab-link">
-					<a href="#" class="selected">
-						<span>수강내역</span>
-					</a>
-					<a href="#">
-						<span>결제내역</span>
-					</a>
-					<a href="#">
-						<span>수강내역</span>
-					</a>
-					<a href="#">
-						<span>1:1 문의하기</span>
-					</a>
-					<a href="#">
-						<span>개인정보수정</span>
-					</a>
+					<a href="#" class="selected"><span>내강의실</span></a>
+					<a href="#"><span>수강내역</span></a>
+					<a href="#"><span>결제내역</span></a>
+					<a href="#"><span>수강후기</span></a>
+					<a href="#"><span>1:1 문의하기</span></a>
+					<a href="#"><span>개인정보수정</span></a>
 				</div>
 
 				<div class="courses-wrap">
