--- a/html/sub/mypage03.html
+++ b/html/sub/mypage03.html
@@ -41,6 +41,15 @@
 						<em class="num"><span>992,000</span>p</em>
 					</p>
 				</div>
+				<div class="tab-link">
+					<a href="#"><span>내강의실</span></a>
+					<a href="#"><span>수강내역</span></a>
+					<a href="#" class="selected"><span>결제내역</span></a>
+					<a href="#"><span>수강후기</span></a>
+					<a href="#"><span>1:1 문의하기</span></a>
+					<a href="#"><span>개인정보수정</span></a>
+				</div>
+
 				<section class="search-area">
 					<fieldset>
 						<legend class="for-a11y">검색</legend>
